feat(preview): render mermaid and PlantUML diagrams, resolve image paths
Diagram fences came out as literal source text and images never loaded.
commonmark has no notion of either, so both fell through to the default
fenced-code path, and relative image paths resolved against about:blank
because loadContent gives the page no base URL.

MarkdownService now post-processes the AST: mermaid fences become
<pre class="mermaid"> for the bundled renderer, plantuml/puml/uml fences
become placeholders backed by DiagramService, and image destinations are
resolved against the document's own directory - for Markdown images and raw
HTML <img> alike. Absolute http(s)/data/file URLs are left alone.

PlantUML renders locally and entirely offline:

- "!pragma layout smetana" selects the pure-Java layout engine, so no
  Graphviz install is needed. This machine has no dot binary and the C4
  diagrams render regardless.
- C4-PlantUML !include URLs pointing at raw.githubusercontent.com are
  rewritten to the <C4/...> standard library shipped inside the jar.
- The SANDBOX security profile blocks all remote and local file includes, so
  a document can never make the renderer read the filesystem or phone home.
  Rendering through plantuml.com or kroki would have been less code but
  uploads diagram sources to a third party, which is wrong for private
  architecture docs.

Rendering runs on a daemon thread and is cached by source, so editing prose
never re-renders an unchanged diagram and a slow render cannot overwrite a
newer document - results carry a generation counter.

mermaid is pinned to 10.9.3 deliberately: 11.x uses JavaScript that JavaFX's
WebKit 615.1 cannot parse, failing with SyntaxError so mermaid never loads at
all. It is injected with executeScript rather than a <script> tag because the
minified source contains "</script>" inside string literals.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>